# monobit

./: .env.dist  .gitignore  Dockerfile  Makefile  config.json  index.html  jsconfig.json  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  vite.config.js
monobit/: apps.py  asgi.py  config_loader.py  ingest.py  settings.py  signals.py  urls.py  wsgi.py
monobit/api/auth/: serializers.py  views.py
monobit/api/projects/: serializers.py  views.py
monobit/ingest/: serializers.py  view.py
monobit/management/commands/: install.py  runworker.py  workeragent.py
monobit/migrations/: 0001_create_user_model.py  0002_create_config_model.py  0003_create_user_roles.py  0004_create_project_and_project_members_model.py  0005_create_project_invitation_model.py  0006_create_issue_and_issue_fingerprint_models.py  0007_create_event_model.py  0008_add_issue_fingerprint_constraint.py  0009_create_job_model.py  0010_remove_message_and_stacktrace_fields_from_event.py  0011_add_properties_to_event_model.py  0012_add_error_to_job_field.py  0013_create_worker_and_worker_instance_model.py  0014_alter_started_at_and_last_heartbeat_in_worker_instance.py
monobit/models/: __init__.py  base.py  choices.py  config.py  event.py  issue.py  job.py  project.py  user.py  worker.py
monobit/templates/: index.html
monobit/tests/: conftest.py
monobit/tests/projects/: __init__.py  test_invitation_model.py  test_membership_model.py  (+1 more)
monobit/views/: base.py
monobit/web/: App.vue  api.js  main.js  router.js
monobit/worker/: __init__.py  processing.py  runner.py
(+15 files in other folders)
